samples/_failures_safe/1761655585_8d0744_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c66c5c04.c:157: error: expected ‘;’, ‘,’ or ‘)’ at end of input
